package com.ml.gestao.estoque.distribuido.enumerated;

public enum TipoMovimento {
    ENTRADA,
    SAIDA
}

